--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.datasource.driver-class-name=
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
+spring.jpa.show-sql =
+spring.jpa.hibernate.ddl-auto =
+spring.jpa.properties.hibernate.dialect =
+server.port=9191
